# law_graph

./: .env.example  .gitignore  CLAUDE.md  NODES_FIRST_VISUALIZATION.md  Procfile  RAILWAY_BUILD_FIX.md  README.md  agent.md  graphrag_api_simple.py  graphrag_api_working.py  graphrag_railway_api.py  graphrag_railway_production.py  pyproject.toml  railway.dockerfile  start_production.py  test_interceptor_debug.py  vercel.json
.claude/agents/: data-agent.md  design-chief.md  interface-agent.md  mcp-agent.md  ontology-agent.md  product-chief.md  uxui-chief.md
.specify/memory/: constitution.md
.specify/templates/: spec-template.md  tasks-template.md
3_borges-interface/: .env.example  local_graphrag_api.py  next.config.js  package.json  tailwind.config.js
book_data/: README.md
book_data/la_maison_vide_laurent_mauvignier/: graph_chunk_entity_relation.graphml  kv_store_community_reports.json  kv_store_full_docs.json  kv_store_llm_response_cache.json  kv_store_text_chunks.json
book_data/raw_books/: maison_vide.txt
borges-library/borges-library-web/: .gitignore  README.md  download_data.py  graphrag_api.py  railway.dockerfile  railway.toml  requirements_api.txt  start_production.py
graphrag-api/: Dockerfile  app.py  railway.toml  requirements.txt
neo4j-api/: app.py  railway.toml  requirements.txt
rag_comparison/: __init__.py  config.py  errors.py  results.py  runner.py
rag_comparison/clients/: __init__.py  base.py  dust_client.py  graphrag_client.py
rag_comparison/metrics/: __init__.py  latency.py  llm_judge.py  status.py
scripts/: __init__.py  run_experiment.py
specs/001-interactive-graphrag-refinement/: US1-FRONTEND-IMPLEMENTATION.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  troubleshooting.md
specs/002-basile-ui-redesign/: tasks.md
specs/003-rag-observability-comparison/: spec.md  tasks.md
tests/: __init__.py  conftest.py  fixtures_real_data.py  test_data_lineage.py  test_data_lineage_simple.py
(+118 files in other folders)
