[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-comparison"
version = "0.1.0"
description = "LLM observability solution to compare Dust RAG agent vs Law GraphRAG API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Arthur Sarazin" }
]
keywords = ["rag", "llm", "observability", "legal", "graphrag", "dust", "opik"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "opik>=1.0.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    # nano_graphrag dependencies
    "tiktoken>=0.5.0",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "tenacity>=8.0.0",
    "hnswlib>=0.7.0",
    "xxhash>=3.0.0",
    "nano-vectordb>=0.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
run-experiment = "scripts.run_experiment:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require API access)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.hatch.build.targets.wheel]
packages = ["rag_comparison"]
